# flow

./: .gitignore  README.md  prd.json  pyproject.toml
.beads/: metadata.json
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-04-07-10-14-23.md
_bmad-output/implementation-artifacts/: 1-1-project-readiness-snapshot.md  1-2-golden-path-first-run.md  1-3-intent-defaults-preflight-gate.md  2-1-error-recovery-classification.md  2-2-safe-retry-payload-clone.md  2-3-crash-replay-pack.md  3-1-output-shelf-recent-artifacts.md  3-2-artifact-to-edit-chain.md  3-3-workflow-memory-continuation.md  4-1-job-progress-storyboard.md  4-2-trust-signals-project-health.md  4-3-cleanup-assistant-local-workspace.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  prd.md
_bmad-output/ralph/: beads-export.jsonl
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
flow_web/: __init__.py  __main__.py  main.py  messages.py  paths.py  schemas.py  service.py  store.py
flow_web/static/: app.js  index.html  styles.css
scripts/: bmad  build_windows_portable.ps1  build_windows_release.ps1  export_bmad_to_ralph.py  ralph-run  ralph-run.exp  run_flow_web.command  run_flow_web.ps1  run_flow_web.sh  run_flow_web_portable.ps1  run_flow_web_tests.sh  setup_windows.ps1  start_beads_server.sh  windows_runtime.ps1
tests/: test_flow_web_smoke.py
