[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-web-ui"
version = "0.1.0"
description = "Local web UI for flow-py and Google Flow workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "flow-py @ https://github.com/eddie-fqh/flow-py/archive/bd01679304d6fccc4c96fea3b33151c2e9e836f4.zip",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
include = ["flow_web*"]
